crates/phala-mq/src/snapshots/phala_mq__send_queue__tests__it_works-3.snap
---
source: crates/phala-mq/src/send_queue.rs
assertion_line: 262
expression: "mq.messages(&MessageOrigin::Reserved)"
---
[
    SignedMessage {
        message: Message {
            sender: Reserved,
            destination: /test,
            payload: [
                20,
                104,
                101,
                108,
                108,
                111,
            ],
        },
        sequence: 0,
        signature: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    },
    SignedMessage {
        message: Message {
            sender: Reserved,
            destination: /test,
            payload: [
                20,
                104,
                101,
                108,
                108,
                111,
            ],
        },
        sequence: 1,
        signature: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    },
]
